tests/valid/testcase08.c
// main function without return

int main(void){
}